General improvements - Unifying deletion + bugfix - Highliting when value is entred - Handling double digit - Tracking highlited value to un-highlight it when needed

--- a/static/index.html
+++ b/static/index.html
@@ -68,10 +68,10 @@
     <div class="footer sticky-bottom">
       <div class="row">
         <div class="col-sm-6">
-          <p>Created by <a href="">@Jangberry</a></p>
+          <p>Created by <a href="https://github.com/Jangberry">@Jangberry</a></p>
         </div>
         <div class="col-sm-6">
-          <p>Source code on <a href="">GitHub /*TODO*/</a></p>
+          <p>Source code on <a href="https://github.com/Jangberry/SudokuCoop">GitHub</a></p>
         </div>
       </div>
     </div>
